# debian-google-cloud-cpp-prototype

./: Dockerfile  README.md  changelog  control  copyright  producer.Dockerfile  run.sh  tester.Dockerfile
debian/: changelog  control  copyright  libgoogle-cloud-cpp-common.install  libgoogle-cloud-cpp-compute.install  libgoogle-cloud-cpp-googleapis.install  libgoogle-cloud-cpp-grpc-utils.install  libgoogle-cloud-cpp-iam-v2.install  libgoogle-cloud-cpp-iam.install  libgoogle-cloud-cpp-kms.install  libgoogle-cloud-cpp-rest-internal.install  libgoogle-cloud-cpp-rest-protobuf-internal.install  libgoogle-cloud-cpp-storage.install  rules
quickstart/: CMakeLists.txt  quickstart_kms.cc  quickstart_storage.cc
